# sticker2smilebot-telegram

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp
docker/: Dockerfile_local  Dockerfile_master  Dockerfile_release
